Fri Jun  7 13:25:27 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/json/fbuffer/fbuffer.h (fbuffer_append_str): change the place of
	  RB_GC_GUARD. it should be after the object is used.

Fri Jun  7 13:22:43 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* gc.c (before_gc_sweep): noinline can also avoid the segv instead of
	  -O0 of r41084. this way is expected less slow.

Fri Jun  7 11:45:42 2013  Kenta Murata  <mrkn@cookpad.com>

	* rational.c (numeric_quo): move num_quo in numeric.c to numeric_quo
	  in rational.c to refer canonicalization state for mathn support.
	  [ruby-core:41575] [Bug #5736]

	* numeric.c (num_quo): ditto.

	* test/test_mathn.rb: add a test for the change at r41109.

Fri Jun  7 11:41:42 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: revert r41106.  size_t may not be unsigned

	* bignum.c (rb_absint_size_in_word, rb_int_export, rb_int_import): use
	  NUM2SIZET() and SIZET2NUM() already defined in ruby/ruby.h.

Fri Jun  7 11:28:37 2013  Masaya Tarui  <tarui@ruby-lang.org>

	* gc.c: use oldgen bitmap as initial mark bitmap when major gc.
	  so can skip oldgen bitmap check around mark & sweep.
	* gc.c (slot_sweep_body): change scan algorithm for performance:
	  from object's pointer base to bitmap one.

Fri Jun  7 11:25:56 2013  Masaya Tarui  <tarui@ruby-lang.org>

	* gc.c: introduce oldgen bitmap for preparing performance tuning.

Fri Jun  7 11:20:57 2013  Masaya Tarui  <tarui@ruby-lang.org>

	* gc.c (MARKED_IN_BITMAP, MARK_IN_BITMAP, CLEAR_IN_BITMAP): bring
	  bitmap macros in one place, and introduce BITMAP_BIT.

Fri Jun  7 11:18:35 2013  Masaya Tarui  <tarui@ruby-lang.org>

	* array.c (ary_new): change order of allocation in order
	  to remove FL_OLDGEN operation.

Fri Jun  7 11:16:28 2013  Masaya Tarui  <tarui@ruby-lang.org>

	* tool/rdocbench.rb: add gc total time information.

Fri Jun  7 10:12:01 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: remove "Sunny" terminology.